--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "9.11.1",
+    "npm": "6.11.2"
+  },
   "dependencies": {
     "cli": "^1.0.1",
     "heroku": "^7.29.0",
